fix button alignment in desktop version

--- a/src/splash.css
+++ b/src/splash.css
@@ -6,7 +6,7 @@
   height: 100%;
   background-image: url('./assets/back-pic.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: right center;
 }
 
 .splash-overlay {
@@ -27,6 +27,9 @@
 .splash-welcome {
   margin-bottom: 20px;
   color: #fff;
+  text-transform: uppercase;
+  font-weight: 500;
+  text-align: center;
 }
 
 .splash-btn-container {
@@ -38,20 +41,23 @@
 .splash-login-btn,
 .splash-signup-btn {
   margin-bottom: 10px;
-  background-color: #04aa6d;
+  background-color: #a5b80e;
   color: white;
   padding: 15px 32px;
   border: 0;
-  border-radius: 8px;
+  border-radius: 30px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 @media screen and (min-width: 769px) {
   .splash-btn-container {
     flex-direction: row;
+    justify-content: space-around;
+    width: 30%;
+    max-width: 40%;
   }
 }
